syntax = "proto3";

import "constants/util.proto";

option java_multiple_files = true;
option java_package = "com.javainuse.authentication";

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  constants.Role role = 3;
}

message UserDTO {
  string username = 1;
  string userid = 2;
  constants.Role role = 3;
}

service AuthService {
  rpc login(LoginRequest) returns (LoginResponse) {};

  rpc register(RegisterRequest) returns (UserDTO) {};
}
